--- a/Lumpy.Lib.Common/Lumpy.Lib.Common.csproj
+++ b/Lumpy.Lib.Common/Lumpy.Lib.Common.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -12,11 +12,11 @@
 		<PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
 		<PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.6" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.6" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.6" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.6" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.9" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.9" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.9" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.9" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.9" />
 
 	</ItemGroup>
 
