--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/hipo760/lumpy.lib.common.git"
+    "url": "https://github.com/hipo760/Lumpy.Lib.Common.git"
   },
   "author": "",
   "license": "ISC",
