--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,10 @@ jobs:
         with:
           branch: master
           dry_run: true
+          extra_plugins: |
+          @semantic-release/changelog
+          @semantic-release/git
+          @semantic-release/github
         env:
           GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
           # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
