--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
             @semantic-release/git
             @semantic-release/github
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       
       
@@ -59,7 +59,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v4.5
         id: tagging
         with:
-          github_token: ${{ secrets.GITHUB_PAT }}
+          github_token: ${{ secrets.GH_PAT }}
           dry_run: true
 
       - name: Show semantic release info
