--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       
       - name: Get semantic release version
         uses: cycjimmy/semantic-release-action@v2
-        id: semantic
+        id: semantic_dry
         with:
           branch: master
           dry_run: true
@@ -55,21 +55,31 @@ jobs:
       # - name: Publish the package to Nuget
       #   run: dotnet nuget push ./artifacts/*.nupkg
       
+      # - name: Tag the branch
+      #   uses: mathieudutour/github-tag-action@v4.5
+      #   id: tagging
+      #   with:
+      #     github_token: ${{ secrets.GH_PAT }}
+      #     dry_run: true
       - name: Tag the branch
-        uses: mathieudutour/github-tag-action@v4.5
-        id: tagging
-        with:
-          github_token: ${{ secrets.GH_PAT }}
-          dry_run: true
+      uses: cycjimmy/semantic-release-action@v2
+      id: semantic
+      with:
+        branch: master
+        # You can specify specifying version range for the extra plugins if you prefer.
+        extra_plugins: |
+          @semantic-release/changelog
+          @semantic-release/git
+          @semantic-release/github
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
       - name: Show semantic release info
         # if: steps.semantic.outputs.new_release_published == 'true'
         run: |
+          echo ${{ steps.semantic_dry.outputs.new_release_version }}
           echo ${{ steps.semantic.outputs.new_release_version }}
-          echo ${{ steps.tagging.outputs.new_tag }}
-          echo ${{ steps.tagging.outputs.new_version }}
-          echo ${{ steps.tagging.outputs.previous_tag }}
-          echo ${{ steps.tagging.outputs.changelog }}
+
       # - name: Package, publish and tag.
       #   id: publish_nuget
       #   uses: rohith/publish-nuget@v2
