--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,25 +61,25 @@ jobs:
       #   with:
       #     github_token: ${{ secrets.GH_PAT }}
       #     dry_run: true
-      - name: Tag the branch
-        uses: cycjimmy/semantic-release-action@v2
-        id: semantic
-        with:
-          branch: master
-          dry_run: false
-          # # You can specify specifying version range for the extra plugins if you prefer.
-          # extra_plugins: |
-          #   @semantic-release/changelog
-          #   @semantic-release/git
-          #   @semantic-release/github
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+      # - name: Tag the branch
+      #   uses: cycjimmy/semantic-release-action@v2
+      #   id: semantic
+      #   with:
+      #     branch: master
+      #     dry_run: false
+      #     # # You can specify specifying version range for the extra plugins if you prefer.
+      #     # extra_plugins: |
+      #     #   @semantic-release/changelog
+      #     #   @semantic-release/git
+      #     #   @semantic-release/github
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
       - name: Show semantic release info
         # if: steps.semantic.outputs.new_release_published == 'true'
         run: |
           echo ${{ steps.semantic_dry.outputs.new_release_version }}
-          echo ${{ steps.semantic.outputs.new_release_version }}
+          
           
       # - name: Package, publish and tag.
       #   id: publish_nuget
@@ -136,3 +136,22 @@ jobs:
       #   with:
       #     name: package-artifact
       #     path: ./artifacts/
+  Tag version:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Get semantic release version
+        uses: cycjimmy/semantic-release-action@v2
+        id: semantic
+        with:
+          branch: master
+          # You can specify specifying version range for the extra plugins if you prefer.
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
+            @semantic-release/github
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          # NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
