--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build_package_push:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -137,6 +137,7 @@ jobs:
       #     name: package-artifact
       #     path: ./artifacts/
   tag_version:
+    needs: build_package_push
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
