--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      
+        
       # -uses: actions/setup-dotnet@v1
       #   with:
       #     dotnet-version: '3.1.x' # SDK Version to use.
@@ -60,6 +60,7 @@ jobs:
       
       - name: Cake action
         uses: cake-build/cake-action@v1.2.0
+        run: pwd
         env:
           NEW_RELEASE_VERSION: ${{ needs.check_version_number.outputs.new_release_version }}
         with:
@@ -67,6 +68,7 @@ jobs:
       
       - name: Upload artifact
         uses: actions/upload-artifact@v2
+        run: pwd
         with:
           name: nuget-artifact
           path: ./**/*.nuget
