--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
       
       # - name: Publish the package to Nuget
       #   run: dotnet nuget push ./artifacts/*.nupkg
-      - run: pwd
+      
       - name: Cake action
         uses: cake-build/cake-action@v1.2.0
         
@@ -65,13 +65,13 @@ jobs:
           NEW_RELEASE_VERSION: ${{ needs.check_version_number.outputs.new_release_version }}
         with:
           script-path: ./build.cake
-      - run: pwd
+      
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         run: pwd
         with:
           name: nuget-artifact
-          path: ./**/*.nuget
+          path: ./artifacts/*.nuget
           if-no-files-found: error
 
   tag_version:
