--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: nuget-artifact
+    - run: ls -R
     - name: Upload to nuget
       uses: actions/setup-dotnet@v1
       with:
