--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,10 +99,11 @@ jobs:
       with:
         name: nuget-artifact
     - run: ls -R
-    - name: Upload to nuget
-      uses: actions/setup-dotnet@v1
+    
+    - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.x' # SDK Version to use.
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.LUMPY_NUGET_TOKEN}}
-        run: dotnet nuget push ./*.nupkg
+      # env:
+      #   NUGET_AUTH_TOKEN: ${{secrets.LUMPY_NUGET_TOKEN}}
+    - name: Upload to nuget
+      run: dotnet nuget push ./*.nupkg --api-key ${{ secrets.LUMPY_NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
