--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,28 +41,26 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      # -uses: actions/setup-dotnet@v1
-      #   with:
-      #     dotnet-version: '3.1.x' # SDK Version to use.
-      #   env:
-      #     NUGET_AUTH_TOKEN: ${{secrets.LUMPY_NUGET_TOKEN}}
-
-      # - name: Build the project.
-      #   run: |
-      #     dotnet restore
-      #     dotnet build
-      
-      # - name: Create the package
-      #   run: dotnet pack --configuration Release --output ./artifacts
-      
-      # - name: Publish the package to Nuget
-      #   run: dotnet nuget push ./artifacts/*.nupkg
-      - name: Cake action
-        uses: cake-build/cake-action@v1.2.0
-        env:
-          NEW_RELEASE_VERSION: ${{ needs.check_version_number.outputs.new_release_version }}
+      -uses: actions/setup-dotnet@v1
         with:
-          script-path: ./build.cake
+          dotnet-version: '5.0.x' # SDK Version to use.
+        # env:
+        #   NUGET_AUTH_TOKEN: ${{secrets.LUMPY_NUGET_TOKEN}}
+
+      - name: Build the project.
+        run: |
+          dotnet build --configuration Release -p:Version=${{ needs.check_version_number.outputs.new_release_version }}.0
+      
+      - name: Create the package
+        run: dotnet pack --configuration Release --output ./artifacts
+      
+      # - name: Cake action
+      #   uses: cake-build/cake-action@v1.2.0
+      #   env:
+      #     NEW_RELEASE_VERSION: ${{ needs.check_version_number.outputs.new_release_version }}
+      #   with:
+      #     script-path: ./build.cake
+
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
