--- a/Lumpy.Lib.Common/Lumpy.Lib.Common.csproj
+++ b/Lumpy.Lib.Common/Lumpy.Lib.Common.csproj
@@ -12,11 +12,11 @@
 		<PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
 		<PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+		<!--<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="5.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />-->
 
 	</ItemGroup>
 
